# calendar

./: Cargo.toml  README.md  justfile
i18n/bg/: cosmic_ext_calendar.ftl
i18n/en/: cosmic_ext_calendar.ftl
i18n/hu/: cosmic_ext_calendar.ftl
i18n/pl/: cosmic_ext_calendar.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  error.rs  i18n.rs  main.rs  services.rs
src/app/: calendar.rs  flags.rs  settings.rs
src/components/: calendar.rs  mod.rs
src/components/calendar/: day.rs  month.rs  week.rs
src/models/: calendar.rs
src/services/: google.rs  microsoft.rs
src/services/microsoft/: models.rs
