[package]
name = "cosmic-ext-calendar"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "A calendar application for the COSMIC desktop"
repository = "https://github.com/cosmic-utils/calendar"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
accounts = { path = "../accounts" }
async-trait = "0.1.89"
futures-util = "0.3.31"
gcal_rs = "0.1.7"
graph-rs-sdk = "3.0.1"
i18n-embed-fl = "0.9.2"
open = "5.3.0"
reqwest = "0.12.23"
rust-embed = "8.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
time = { version = "0.3.44", features = ["serde", "local-offset"] }
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
